Cập nhật code mới đã sửa logic chấm công, sửa cách tính lương, cơ bản hoàn thiện 2/11/2025

--- a/frontend/public/assets/css/hop-dong.css
+++ b/frontend/public/assets/css/hop-dong.css
@@ -130,3 +130,24 @@ td {
   display: flex;
   height: 76px;
 }
+
+.dropdown-list {
+  position: absolute;
+  top: 60px;
+  left: 0;
+  right: 0;
+  background: #fff;
+  border: 1px solid #ccc;
+  max-height: 180px;
+  overflow-y: auto;
+  z-index: 9999; /* Đảm bảo nổi lên trên */
+  border-radius: 4px;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
+}
+.dropdown-list div {
+  padding: 6px 10px;
+  cursor: pointer;
+}
+.dropdown-list div:hover {
+  background-color: #f2f2f2;
+}
